--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,7 @@ Temporary Items
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/vcs.xml
-.idea/**/modules.xml
-.idea/**/php.xml
+.idea/**/*.xml
 .idea/dictionaries
 
 # Sensitive or high-churn files:
